# Course_work_5

./: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.nginx  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habit/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_alter_habits_time_to_action.py  0003_alter_habits_owner.py  0004_alter_habits_time_to_action.py
users/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_customuser_tg_chat_id.py
